Fixing horizontal scroll

--- a/styles/main.css
+++ b/styles/main.css
@@ -7,7 +7,6 @@ html {
   font-family: "Roboto Condensed", sans-serif;
   /* min-fs + (max-fs - min-fs) * ((viewport-width - min-vw) / (max-vw - min-vw)) */
   font-size: calc(10px + (20 - 10) * ((900px - 340px) / (900 - 340)));
-  overflow-x: hidden;
 }
 
 body {
@@ -16,6 +15,8 @@ body {
     background-repeat: no-repeat;
     background-position: center bottom, center;
     background-size: 101%, cover;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 .arcade {
